@@ -138,8 +138,17 @@
       (let ((event `(mouse-1 (,(selected-window) 1 (0 . 0) 0))))
         (set-window-buffer nil (current-buffer))
         (insert "http://emacs.org/")
+        (goto-char (point-min))
         (should-equal "http://emacs.org/" (thing-at-mouse event 'url))
-        (should-equal '(1 . 18) (bounds-of-thing-at-mouse event 'url))))))
+        (should-equal '(1 . 18) (bounds-of-thing-at-mouse event 'url))
+        (should-not (region-active-p))
+        (mark-thing-at-mouse event 'url)
+        (should-equal (point) 18)
+        (should-equal '((1 . 18)) (region-bounds))
+        (let ((mouse-select-region-move-to-beginning t))
+          (mark-thing-at-mouse event 'url))
+        (should-equal (point) 1)
+        (should-equal '((1 . 18)) (region-bounds))))))
 
 (ert-deftest dolist-with-progress-reporter ()
   (let (y)
