@@ -3,6 +3,7 @@
 * Development
 
 - compat-27: Add ~file-name-unquote~.
+- compat-28: Add ~mark-thing-at-mouse~.
 - compat-29: Replace ~string-lines~ with version from Emacs 29, support optional
   KEEP-NEWLINES argument.
 
